# meson-cpp-cuda

./: .gitignore  README.md  meson.build
include/: cuda.cuh
scripts/: build.sh  run.sh
src/: cuda.cu  main.cpp
